--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			width: 80%;
 			margin: 0 auto;
 		}
+		h1, h2 {
+			font-family: Futura, system-ui, sans-serif;
+		}
 		h2 {
 			margin-top: 3rem;
 		}
