--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		body {
 			font-family: Avenir, system-ui, sans-serif;
 			font-size: 16px;
-			max-width: 500px;
+			max-width: 700px;
 			width: 80%;
 			margin: 0 auto;
 		}
@@ -41,6 +41,11 @@
 <h2>Play Note</h2>
 <button type="button" onclick="playNote()">Play Note</button>
 
+
+<h2>Email Obfuscator</h2>
+<a id="emailField">Contact</a>
+
 <script src="play-note.js"></script>
+<script src="email-obfuscator.js"></script>
 </body>
 </html>
