rel="noopener" auto inject

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 <h2>Email Obfuscator</h2>
 <a id="emailField">Contact</a>
 
+
+<h2>Auto-inject rel="noopener" to anchors</h2>
+<p>
+	<a href="https://uidrafter.com">Inspect me</a> and compare it with View Source.
+</p>
+
+
 <script src="play-note.js"></script>
 <script src="email-obfuscator.js"></script>
+<script src="rel-noopener.js"></script>
 </body>
 </html>
