--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 </p>
 
 
+<h2>Preventing widow words</h2>
+<a href="https://blog.uidrafter.com/how-to-fix-html-widow-words">How to fix Widow Words?</a>
+
+
 <script src="play-note.js"></script>
 <script src="email-obfuscator.js"></script>
 <script src="rel-noopener.js"></script>
