--- a/index.html
+++ b/index.html
@@ -21,18 +21,24 @@
 		}
 		button {
 			cursor: pointer;
+			padding: 8px;
 		}
 		button:active {
 			cursor: grabbing;
 		}
 	</style>
+	<link rel="stylesheet" href="./mui-ripple.css">
 	<link rel="stylesheet" href="./mui-input.css">
 </head>
 <body>
 
 <h1>Web Tricks</h1>
 
-<h2>CSS only Material UI input bar animation</h2>
+<h2>CSS-only Material UI ripple</h2>
+<button class="ripple" type="button" autofocus>Focus</button>
+
+
+<h2>CSS-only Material UI input bar animation</h2>
 <label>
 	<input class="muiInput" placeholder="Click me">
 </label>
