--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
 		button:active {
 			cursor: grabbing;
 		}
-		
+
+		#InteractiveConnectionTarget {
+			height: 240px;
+			width: 90%;
+			background: #ddd;
+			touch-action: none; /* Prevents scrolling on touch */
+		}
+		#InteractiveConnection {
+			fill: none;
+			stroke: black;
+			stroke-width: 2px;
+		}
+
 		footer {
 			padding: 20px 0;
 			margin-top: 9rem;
@@ -68,6 +80,11 @@
 <a href="https://blog.uidrafter.com/how-to-fix-html-widow-words">How to fix Widow Words?</a>
 
 
+<h2>Draw Interactive Connection</h2>
+<svg id="InteractiveConnectionTarget">
+	<path d="" id="InteractiveConnection" />
+</svg>
+
 
 <footer>
 	&copy; 2022 Eric Fortis
@@ -78,5 +95,6 @@
 <script src="play-note.js"></script>
 <script src="email-obfuscator.js"></script>
 <script src="rel-noopener.js"></script>
+<script src="draw-interactive-connection.js"></script>
 </body>
 </html>
