--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		#InteractiveConnectionTarget {
 			width: 90%;
 			height: 240px;
-			background: #ddd;
+			background: #222;
 			touch-action: none; /* Prevents scrolling on touch */
 		}
 		#InteractiveConnection {
 			fill: none;
-			stroke: black;
+			stroke: #ff4000;
 			stroke-width: 2px;
 		}
 
