--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta content="width=device-width" name="viewport">
-	<title>Web Tricks</title>
+	<link rel="icon" href="favicon.svg" type="image/svg+xml">
+	<title>Web Tricks (Eric Fortis)</title>
 	<style>
 		html,
 		body {
