feature-detection.js

--- a/index.html
+++ b/index.html
@@ -87,12 +87,21 @@
 </svg>
 
 
+<h2>Feature Detection</h2>
+
+<h3>isCommantrol</h3>
+<p><kbd>Command</kbd> on macOS, <kbd>Control</kbd> otherwise.</p>
+
+<h3>isMac, isSafari, touchSupported</h3>
+
+
 <footer>
 	&copy; 2022 Eric Fortis
 	<br>
 	<a href="https://twitter.com/efortis">@efortis</a>
 </footer>
 
+<script src="feature-detection.js"></script>
 <script src="play-note.js"></script>
 <script src="email-obfuscator.js"></script>
 <script src="rel-noopener.js"></script>
