remove interactive link.
It's now in the web-animations repo

--- a/index.html
+++ b/index.html
@@ -30,18 +30,6 @@
 			tab-size: 2;
 		}
 
-		#InteractiveConnectionTarget {
-			width: 90%;
-			height: 240px;
-			background: #222;
-			touch-action: none; /* Prevents scrolling on touch */
-		}
-		#InteractiveConnection {
-			fill: none;
-			stroke: #ff4000;
-			stroke-width: 2px;
-		}
-
 		footer {
 			padding: 20px 0;
 			margin-top: 9rem;
@@ -54,6 +42,10 @@
 <body>
 
 <h1>Web Tricks</h1>
+<p>
+	A collection of tips and tricks for web front-end development.
+</p>
+
 
 
 <h2>CSS-only Material UI input bar animation</h2>
@@ -86,18 +78,14 @@
 <a href="https://blog.uidrafter.com/how-to-fix-html-widow-words">How to fix Widow Words?</a>
 
 
-<h2>Draw Interactive Connection</h2>
-<p>
-	This is SVG, but you can use <code>describeCurve</code> for canvas too.
-</p>
-<svg id="InteractiveConnectionTarget">
-	<path d="" id="InteractiveConnection" />
-</svg>
-
-
 <h2>Feature Detection</h2>
 <pre><code id="feature-detection.js" class="language-javascript"></code></pre>
 
+
+<h2>More</h2>
+<p>
+	<a href="https://ericfortis.github.io/web-animations/" target="_blank">Web Animations</a>
+</p>
 
 <footer>
 	&copy; 2022 Eric Fortis
@@ -128,7 +116,6 @@
 </script>
 <script src="play-note.js"></script>
 <script src="email-obfuscator.js"></script>
-<script src="draw-interactive-connection.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js" integrity="sha512-yUUc0qWm2rhM7X0EFe82LNnv2moqArj5nro/w1bi05A09hRVeIZbN6jlMoyu0+4I/Bu4Ck/85JQIU82T82M28w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
