--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <pre><code id="feature-detection.js" class="language-javascript"></code></pre>
 
 
-<h2>More</h2>
+<h2>More…</h2>
 <p>
 	<a href="https://ericfortis.github.io/web-animations/" target="_blank">Web Animations</a>
 </p>
