--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
 <script>
 	window.addEventListener('load', function () {
 		for (const elem of document.querySelectorAll('code')) {
-			if (!elem.id)
-				continue
+			const filename = elem.id
+			if (filename) {
+				if (filename.endsWith('.js'))
+					elem.className = 'language-javascript'
+				else if (filename.endsWith('.css'))
+					elem.className = 'language-css'
 
-			if (elem.id.endsWith('.js'))
-				elem.className = 'language-javascript'
-			else if (elem.id.endsWith('.css'))
-				elem.className = 'language-css'
-
-			readFromGithub(elem, elem.id)
+				readFromGithub(elem, filename)
+			}
 		}
 
 		function readFromGithub(targetEl, file) {
