--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <h1>Web Tricks</h1>
 <p>
-	A collection of tips and tricks for web front-end development.
+	Tips and tricks for web front-end development.
 </p>
 
 
