--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 			border-radius: 14px;
 			box-shadow: var(--boxShadowIndex1);
 		}
-
 		footer {
 			padding: 20px 0;
 			margin-top: 9rem;
@@ -79,7 +78,7 @@
 
 
 <h2>Email Obfuscator</h2>
-<a id="emailField">Contact</a>
+<a id="EmailLink">Contact</a>
 <pre id="email-obfuscator.js"></pre>
 
 
