--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			margin-top: 9rem;
 			color: #999;
 		}
+		
 		.hljs-selector-class {
 			color: #a626a4
 		}
@@ -58,9 +59,9 @@
 		}
 		.hljs-return {
 			padding-right: 4px;
-			padding-bottom: 2px;
+			padding-bottom: 1px;
 			padding-left: 8px;
-			background: #8b056f;
+			background: #a626a4;
 			border-bottom-left-radius: 10px;
 			border-top-left-radius: 10px;
 			color: white;
