--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			margin-top: 9rem;
 			color: #999;
 		}
-		
+
 		.hljs-selector-class {
 			color: #a626a4
 		}
@@ -77,7 +77,7 @@
 
 
 <h2>CSS-only Material UI input bar animation</h2>
-<input class="muiInput" placeholder="Click me">
+<input class="muiInput" placeholder="Click me" />
 <pre id="mui-input.css"></pre>
 
 
