--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			font-family: Avenir Next, system-ui, sans-serif;
 			font-size: 16px;
 		}
+		ul li {
+			line-height: 2;
+		}
 		h2 {
 			margin-top: 6rem;
 		}
@@ -34,6 +37,10 @@
 		}
 		a {
 			color: var(--accent);
+			text-decoration: none;
+		}
+		a:hover {
+			text-decoration: underline;
 		}
 		button:active {
 			cursor: grabbing;
@@ -82,6 +89,20 @@
 </p>
 
 
+<h2>Blog Posts</h2>
+<ul>
+	<li><a href="//blog.uidrafter.com/types-without-typescript">Types without TypeScript</a></li>
+	<li><a href="//blog.uidrafter.com/getting-rid-of-npm-scripts">(Security) Getting rid of NPM scripts</a></li>
+	<li><a href="//blog.uidrafter.com/conditional-avif-for-video-posters">(AVIF, JXL) Serve the optimal image format</a></li>
+	<li><a href="//blog.uidrafter.com/architecture-of-a-desktop-alike-spa">UI Drafter Architecture</a></li>
+	<li><a href="//blog.uidrafter.com/how-to-fix-html-widow-words">How to prevent widow words?</a></li>
+	<li><a href="//blog.uidrafter.com/bitwise-table-lookup">Bitwise Table Lookup (JS multiplexer)</a></li>
+	<li><a href="//blog.uidrafter.com/prefetching-pages">Prefetch Pages</a></li>
+	<li><a href="//blog.uidrafter.com/prefetching-dns-records">Prefetch DNS Records</a></li>
+	<li><a href="//blog.uidrafter.com/finding-outdated-npm">Finding outdated NPMs across many projects</a></li>
+</ul>
+
+
 <h2>Pulse on change</h2>
 <input size="3" type="text" id="numA" value="1" />&nbsp;+
 <input size="3" type="text" id="numB" value="2" />&nbsp;&nbsp;&nbsp;=
@@ -112,10 +133,6 @@
 
 <h2>Auto-inject rel="noopener" to anchors</h2>
 <pre id="rel-noopener.js"></pre>
-
-
-<h2>Preventing widow words</h2>
-<a href="https://blog.uidrafter.com/how-to-fix-html-widow-words">How to fix Widow Words?</a>
 
 
 <h2>Feature Detection</h2>
@@ -151,8 +168,8 @@
 		}
 
 		function readFromGithub(targetEl, file) {
-			// fetch(`./${file}`)
-			fetch(`https://raw.githubusercontent.com/ericfortis/web-tricks/main/${file}`)
+			fetch(`./${file}`)
+				// fetch(`https://raw.githubusercontent.com/ericfortis/web-tricks/main/${file}`)
 				.then(res => res.text())
 				.then(text => {
 					targetEl.textContent = text
