--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
 
 <h2>Blog Posts</h2>
 <ul>
-	<li><a href="//blog.uidrafter.com/types-without-typescript">Types without TypeScript</a></li>
-	<li><a href="//blog.uidrafter.com/getting-rid-of-npm-scripts">(Security) Getting rid of NPM scripts</a></li>
-	<li><a href="//blog.uidrafter.com/conditional-avif-for-video-posters">(AVIF, JXL) Serve the optimal image format</a>
-	</li>
-	<li><a href="//blog.uidrafter.com/architecture-of-a-desktop-alike-spa">UI Drafter Architecture</a></li>
-	<li><a href="//blog.uidrafter.com/how-to-fix-html-widow-words">How to prevent widow words?</a></li>
-	<li><a href="//blog.uidrafter.com/bitwise-table-lookup">Bitwise Table Lookup (JS multiplexer)</a></li>
-	<li><a href="//blog.uidrafter.com/prefetching-pages">Prefetch Pages</a></li>
-	<li><a href="//blog.uidrafter.com/prefetching-dns-records">Prefetch DNS Records</a></li>
-	<li><a href="//blog.uidrafter.com/finding-outdated-npm">Finding outdated NPMs across many projects</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/types-without-typescript">Types without TypeScript</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/getting-rid-of-npm-scripts">(Security) Getting rid of NPM scripts</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/conditional-avif-for-video-posters">(AVIF, JXL) Serve the optimal image format</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/architecture-of-a-desktop-alike-spa">UI Drafter Architecture</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/how-to-fix-html-widow-words">How to prevent widow words?</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/bitwise-table-lookup">Bitwise Table Lookup (JS multiplexer)</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/prefetching-pages">Prefetch Pages</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/prefetching-dns-records">Prefetch DNS Records</a></li>
+	<li><a target="_blank" href="//blog.uidrafter.com/finding-outdated-npm">Finding outdated NPMs across many projects</a></li>
 </ul>
 
 
