remove blog posts

--- a/index.html
+++ b/index.html
@@ -89,20 +89,6 @@
 </p>
 
 
-<h2>Blog Posts</h2>
-<ul>
-	<li><a target="_blank" href="//blog.uidrafter.com/types-without-typescript">Types without TypeScript</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/getting-rid-of-npm-scripts">(Security) Getting rid of NPM scripts</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/conditional-avif-for-video-posters">(AVIF, JXL) Serve the optimal image format</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/architecture-of-a-desktop-alike-spa">UI Drafter Architecture</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/how-to-fix-html-widow-words">How to prevent widow words?</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/bitwise-table-lookup">Bitwise Table Lookup (JS multiplexer)</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/prefetching-pages">Prefetch Pages</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/prefetching-dns-records">Prefetch DNS Records</a></li>
-	<li><a target="_blank" href="//blog.uidrafter.com/finding-outdated-npm">Finding outdated NPMs across many projects</a></li>
-</ul>
-
-
 <h2>Pulse on change</h2>
 <input size="3" type="text" id="numA" value="1" />&nbsp;+
 <input size="3" type="text" id="numB" value="2" />&nbsp;&nbsp;&nbsp;=
@@ -140,9 +126,14 @@
 
 
 <h2>More…</h2>
-<p>
-	<a href="https://ericfortis.github.io/web-animations/" target="_blank">Web Animations</a>
-</p>
+<ul>
+	<li>
+		<a href="https://ericfortis.github.io/web-animations/" target="_blank">Web Animations</a>
+	</li>
+	<li>
+		<a href="https://blog.uidrafter.com" target="_blank">Blog Posts</a>
+	</li>
+</ul>
 
 <footer>
 	&copy; 2022 Eric Fortis
