--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="./mui-ripple.css" rel="stylesheet">
 	<link href="./mui-input.css" rel="stylesheet">
 	<link href="./pulse-on-change.css" rel="stylesheet">
-	<title>Web Tricks (Eric Fortis)</title>
+	<title>Web Frontend Tricks by Eric Fortis</title>
 	<style>
 		:root {
 			--accent: dodgerblue;
@@ -28,6 +28,10 @@
 		}
 		h2 {
 			margin-top: 6rem;
+			position: relative;
+			left: -5px;
+			padding: 5px 0 5px 5px;
+			border-radius: 10px;
 		}
 
 		a {
@@ -93,7 +97,7 @@
 </head>
 <body>
 
-<h1>Web Tricks</h1>
+<h1>Web Frontend Tricks</h1>
 <p>
 	Tips and tricks for web front-end development.
 </p>
@@ -166,6 +170,38 @@
 			li.append(a)
 			document.getElementById('toc').append(li)
 		}
+
+		(function flashHighlightWhenScrollingToFragments() {
+			const FLASH_BG_COLOR = '#77ffc4'
+			let elPendingHighlightOff = null
+			let highlightTimer = null
+
+			if (location.hash)
+				highlightSectionTitle(location.hash)
+
+			for (const anchor of document.querySelectorAll('a'))
+				if (anchor.hash)
+					anchor.addEventListener('click', highlightSectionTitle.bind(null, anchor.hash))
+
+			function highlightSectionTitle(fragmentName) {
+				try {
+					const el = document.querySelector(fragmentName)
+					if (elPendingHighlightOff || el === elPendingHighlightOff) {
+						elPendingHighlightOff.style.background = ''
+						clearTimeout(highlightTimer)
+					}
+					el.style.background = FLASH_BG_COLOR
+					elPendingHighlightOff = el
+					highlightTimer = setTimeout(function () {
+						el.style.background = ''
+						elPendingHighlightOff = null
+					}, 2100)
+				}
+				catch (_) {
+					setTimeout(function () {})
+				}
+			}
+		}())
 
 
 		/* Inject and Style Code Snippets */
