--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 <pre id="play-note.js"></pre>
 
 
-<h2 id="-email-obfuscator">Email Obfuscator</h2>
+<h2 id="-email-obfuscator">Email Deobfuscator</h2>
 <a id="EmailLink">Contact</a>
-<pre id="email-obfuscator.js"></pre>
+<pre id="email-deobfuscator.js"></pre>
 
 
 <h2 id="-rel-noopener">Auto-inject rel="noopener" to anchors</h2>
@@ -235,7 +235,7 @@
 	})
 </script>
 <script src="play-note.js"></script>
-<script src="email-obfuscator.js"></script>
+<script src="email-deobfuscator.js"></script>
 <script src="pulse-on-change.js"></script>
 <script crossorigin="anonymous" integrity="sha512-yUUc0qWm2rhM7X0EFe82LNnv2moqArj5nro/w1bi05A09hRVeIZbN6jlMoyu0+4I/Bu4Ck/85JQIU82T82M28w==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 </body>
