add form data to json and fetch with retry

--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 <pre id="feature-detection.js"></pre>
 
 
+<h2 id="-form-data-to-json">Form Data to JSON</h2>
+<pre id="form-data-to-json.js"></pre>
+
+
+<h2 id="-fetch-with-retry">Fetch with Retry</h2>
+<pre id="fetch-with-retry.js"></pre>
+
+
 <h2 id="-more">More…</h2>
 <ul>
 	<li>
